[B]1.3.0[/B]
- Changes required for XBMC Frodo

[B]1.2.2[/B]
- Cleanup of a number of skin texture files.
- Changed custom home menu items to use favourites script
  (now 15 general favourites postions instead of 6 scripts and 6 playlists).
- PVR support included in skin, only available with late Frodo Alpha releases.
- Re-worked background handling.  Should be quicker for non video library parts of the skin.
- Now support weather condition backgrounds in MyWeather.    
- A number of minor bug fixes.

[B]1.2.1[/B]
- Changed Video watched/unwatched/partiallywatched flags to match iOS style flags
- Added support for script.xbmc.debug.log to new skin/support menu
- Added Hitcher's debug info and screen grid to skin/support menu
- Added Play Album from Album info screen (Thanks Hitcher and Ronie for making this happen)
- Extend support for clearart and logo's to Movies.
- Added support for CD disc art to music visualisation screen.
- A number of skin stability bug fixes. Horizontal home menu in particular is much more stable.

[B]1.2.0[/B]
- Skin now coded in 720p.
- Added support artwork.downloader, globalsearch and artistslideshow scripts (Eden build only).
- Added support of PseudoTV (Eden build only).
- Added Rollback button to addon info screen, to allow rolling back to previous versions of addons (Eden build only).
- Added Peripheral settings support. (Eden build only).
- Added video info to "List" view, now matches "List2" view.
- Added support for extrafanarts/ and season level fanart for TV Shows. (Eden build only)
- New horizontal Home menu, skin defaults to old vertical menu. (Eden build only)
- Lots of work on music visualisation/karaoke screens, including support for ArtistSlideshow script where appropriate.
- Cleanup of video OSD screens, hopefully better layed out while reducing on screen footprint.
- Major refactor of system menu.
- Cleanup of a number of screens to improve navigation.
- Fix to allow video info for a playing video.