@@ -1,5 +1,16 @@
 [B]1.3.0[/B]
-- Changes required for XBMC Frodo
+- Changes to artwork handling required for XBMC Frodo.
+- Major cleanup of skin message strings, strings now being translated via Transfix.
+- Re-worked Horizontal home menu code as Eden version did not work under Frodo,
+  Have now also solved issue with home menu headings and lists getting out of sync.
+- Major refactor of skin setting menu (now accessed from system appearance menu),
+  Number of menu items remove as no longer relavant.
+- Horizontal home menu is now the default Home menu (vertical home menu still available)
+- Skin now has a look much closer to Gen2 AppleTV when in horizontal home menu mode.
+- User can now select the visibilty of the background fanart image (three different levels),
+  can now also tell skin to ignore extrafanarts (useful for low speced machines).
+- Further work on cleaning up skin textures (also removed a number of redundant images).
+- A number of bug fixes and code cleanups  
 
 [B]1.2.2[/B]
 - Cleanup of a number of skin texture files.
